
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_short ;
struct sockaddr_in {int sin_port; int sin_family; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int sin ;


 int AF_INET ;
 int EXIT_FAILURE ;
 int PF_INET ;
 int SOCK_STREAM ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int die (char*) ;
 int exit (int ) ;
 struct hostent* gethostbyname (char const*) ;
 int herror (char*) ;
 int htons (int) ;
 int memcpy (int *,int ,int ) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int socket (int ,int ,int ) ;

int tcp_connect(const char *host, u_short port)
{
 int sock;
 struct hostent *he;
 struct sockaddr_in sin;

 if ((sock = socket(PF_INET, SOCK_STREAM, 0)) < 0)
  die("sock");

 if ((he = gethostbyname(host)) == ((void*)0)) {
  herror("gethostbyname");
  exit(EXIT_FAILURE);
 }

 memset(&sin, 0, sizeof(sin));
 memcpy(&sin.sin_addr, he->h_addr, he->h_length);
 sin.sin_family = AF_INET;
 sin.sin_port = port == 0 ? htons(80):htons(port);

 if (connect(sock, (struct sockaddr*)&sin, sizeof(sin)) < 0) {
  close(sock);
  return -1;
 }
 return sock;
}
